# bf-multiplayer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: build.yml
cmake/: SwitchTools.cmake  toolchain.cmake
config/: ModuleList.sym  VersionList.sym  config.cmake  npdm.json
include/: nn  nvn  types.h  vapours
include/Game/Boss/: Bunbun.h  BunbunStateShellAttack.h  BunbunStateSpinAttack.h  DarkBowser.h
include/Game/Enemy/: ActorStateSupportFreeze.h  ShadowMario.h  ShadowRacer.h
include/Game/Factory/: ProjectActorFactory.h
include/Game/Layout/: ButtonCursorParts.h  ButtonGroup.h  CounterGoalItemParts.h  GuideGameWindow.h  RCSControlGuideBar.h  RCS_UserNameplate.h  ShardCounterParts.h  SingleModeSceneLayout.h  TopMenu.h  WindowConfirm.h  WindowMessage.h  WindowProcessing.h
include/Game/MapObj/: Coin.h  DisasterModeController.h  EchoBlockMapParts.h  GoalItem.h  InkPatch.h  IslandHolder.h  IslandKeeper.h  JumpFlipPanel.h  KoopaJr.h  Lighthouse.h  RaidonSurf.h  Shards.h  SuperBowser.h  SuperBowserShell.h  SupportFreeze.h
include/Game/Npc/: NekoNormal.h  NekoParent.h
include/Game/Player/: CourseSelectPlayerActor.h  IUsePlayerRetargettingSelector.h  PlayerActionGraph.h  PlayerActionKnockDown.h  PlayerActionNode.h  PlayerActor.h  PlayerAnimator.h  PlayerModel.h  PlayerModelHolder.h  PlayerModelHolderCreator.h  PlayerRetargettingSelector.h  PlayerRetargettingSelectorSceneObj.h
include/Game/Scene/: InGameSceneBase.h  PhaseBossScene.h  SingleModeScene.h  StageScene.h  TopMenuScene.h
include/Game/Sequence/: ProductSequence.h  ProductStateLuigiBros.h  ProductStateSingleMode.h  StageWipeKeeper.h
include/Game/System/: AssetLoadingThread.h  GameDataHolder.h  GameDataHolderAccessor.h  IslandDataFunction.h  SaveDataAccessFunction.h  SaveDataAccessSequence.h  SingleModeData.h  SingleModeDataFunction.h
include/Game/Util/: PlayerConstUtil.h  PlayerUtil.h  SceneObjUtil.h  SensorUtil.h
include/agl/: DisplayList.h  RenderBuffer.h  TextureData.h  gpu.h
include/agl/detail/: Surface.h
include/agl/driver/: NVNtexture.h
include/agl/g3d/: g3d_ResFile.h
include/al/Action/: ActorActionKeeper.h
include/al/Anim/: AnimPlayerSkl.h  SklAnimRetargettingInfo.h
include/al/AreaObj/: AreaObjDirector.h  AreaUtil.h
include/al/Audio/: AudioDirector.h  AudioKeeper.h  MeInfo.h
include/al/Base/: String.h
include/al/Camera/: CameraDirector_RS.h  CameraPoser_RS.h
include/al/Collision/: Collider.h  CollisionDirector.h  CollisionParts.h  MtxConnector.h
include/al/Controller/: ControllerUtil.h
include/al/Debug/: HioNode.h
include/al/Draw/: GraphicsStressDirector.h  GraphicsSystemInfo.h
include/al/Effect/: EffectKeeper.h
include/al/Execute/: ExecuteDirector.h  ExecuteFunction.h  ExecuteOrder.h  ExecuteTableHolderUpdate.h
include/al/Factory/: ActorFactory.h  Factory.h
include/al/File/: FileFunction.h
include/al/Functor/: FunctorBase.h  FunctorV0M.h
include/al/HitSensor/: HitSensor.h  SensorMsg.h
include/al/Item/: ActorScoreKeeper.h
include/al/Joint/: JointUtil.h
include/al/KeyPose/: KeyPose.h  KeyPoseKeeper.h
include/al/Layout/: LayoutActionKeeper.h  LayoutActor.h  LayoutInitInfo.h  LayoutKeeper.h  LayoutPartsActorKeeper.h  LayoutSceneInfo.h
include/al/Light/: ActorPrePassLightKeeper.h
include/al/LiveActor/: ActorActionFunction.h  ActorClippingFunction.h  ActorInitFunction.h  ActorModelFunction.h  ActorMovementFunction.h  ActorParamHolder.h  ActorPoseKeeperBase.h  ActorResourceFunction.h  ActorSceneFunction.h  ActorSensorFunction.h  HitReactionKeeper.h  HitSensorKeeper.h  (+3 more)
include/flips/: crc32.h  global.h  libbps.h
include/nerd/: ErrorViewer.h
include/pe/: BunbunMod.h  EchoEmitterMod.h  Exception.h
include/sys/: socket.h
lib/penet/: CMakeLists.txt
module/: subsdk9.ld  subsdk9.specs.template
romfs/EffectData/: EffectDataBase.szs.bps
romfs/LayoutData/: PeWarningLayout1.szs  RCS_TopMenu.szs.bps  SingleModeSceneLayout.szs.bps
romfs/ObjectData/: Foomin.szs  Kinopio.szs.bps  KinopioBoomerang.szs.bps  KinopioClimb.szs.bps  KinopioClimbWhite.szs.bps  KinopioEye.szs.bps  KinopioFace.szs.bps  KinopioFire.szs.bps  KinopioMini.szs.bps  KinopioMiniFace.szs.bps  KinopioRaccoonDog.szs.bps  KinopioRaccoonDogWhite.szs.bps  Luigi.szs.bps  LuigiBoomerang.szs.bps  LuigiClimb.szs.bps  LuigiClimbWhite.szs.bps  LuigiEye.szs.bps  LuigiFace.szs.bps  LuigiFire.szs.bps  LuigiMini.szs.bps  LuigiMiniFace.szs.bps  LuigiRaccoonDog.szs.bps  LuigiRaccoonDogWhite.szs.bps  Peach.szs.bps  PeachBoomerang.szs.bps  PeachClimb.szs.bps  PeachClimbWhite.szs.bps  PeachFace.szs.bps  PeachFire.szs.bps  PeachMini.szs.bps  PeachMiniFace.szs.bps  PeachRaccoonDog.szs.bps  PeachRaccoonDogWhite.szs.bps  PlayerPuppet.szs  Rosetta.szs.bps  RosettaBoomerang.szs.bps  RosettaClimb.szs.bps  RosettaClimbWhite.szs.bps  RosettaFace.szs.bps  RosettaFire.szs.bps  (+4 more)
romfs/SoundData/: SeDataBase.szs.bps
server/: CMakeLists.txt  Config.json
server/Include/: main.h
server/Include/pe/: ServerSaveData.h  ServerUtil.h  Util.h
server/Include/pe/Enet/: Client.h  Console.h  ProjectPacketHandler.h  Server.h
server/Source/: main.cpp
server/Source/pe/: ServerSaveData.cpp  ServerUtil.cpp  Util.cpp
server/Source/pe/Enet/: Client.cpp  Console.cpp  ProjectPacketHandler.cpp  Server.cpp
src/: common.hpp  imgui_nvn.cpp  imgui_nvn.h  lib.hpp  main.cpp  types.h  wrapper.cpp
src/flips/: crc32.cpp  libbps.cpp
src/glslc/: glslc.h
src/helpers/: InputHelper.cpp  InputHelper.h  fsHelper.cpp  fsHelper.h
src/imgui_backend/: ImguiShaderCompiler.cpp  ImguiShaderCompiler.h  MemoryBuffer.cpp  imgui_hid_mappings.h  imgui_impl_nvn.cpp  imgui_impl_nvn.hpp  nvn_imgui_config.h
src/lib/: replace.cpp  replace.hpp
src/nn/: nn_common.hpp
src/pe/: Exception.cpp
src/program/: imgui_nvn.cpp  impls.cpp  main.cpp  setting.hpp
syms/: main.sym  nvn.sym  sdk.sym
syms/110/: main.sym  nvn.sym  sdk.sym  stubs.sym
tools/: cleanUpLinkerScript.py
(+453 files in other folders)
